# fastapi-basics

./: README.md  main.py  pyproject.toml
