[tool.poetry]
name = "fastapi-basics"
version = "0.1.0"
description = "A basic project to explore fastapi"
authors = ["Gokul Narayanan <gokul.narayanan@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"
fastapi = "0.115.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
